--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
